[gd_scene load_steps=16 format=3 uid="uid://di4uiqohlx2qw"]

[ext_resource type="Script" path="res://invisible_in_game.gd" id="1_3m3gt"]
[ext_resource type="PackedScene" uid="uid://c0jdqg1xenskv" path="res://areaswitch.tscn" id="1_5doj2"]
[ext_resource type="Script" path="res://camera.gd" id="1_6soux"]
[ext_resource type="PackedScene" uid="uid://cdudyaojxmf5b" path="res://character.tscn" id="1_c4pgj"]
[ext_resource type="Script" path="res://ui.gd" id="3_2dt8t"]
[ext_resource type="Script" path="res://spawner.gd" id="3_cqtm7"]
[ext_resource type="PackedScene" uid="uid://cabod6cllbi2u" path="res://golem.tscn" id="4_2j3f2"]
[ext_resource type="Script" path="res://resources.gd" id="4_dx30y"]
[ext_resource type="Texture2D" uid="uid://dyonwqexiotim" path="res://assets/key_1.png" id="5_8587g"]
[ext_resource type="Texture2D" uid="uid://id26krvsng4y" path="res://assets/spellslots.png" id="5_ul220"]
[ext_resource type="Texture2D" uid="uid://dks0badrcgdpw" path="res://assets/key_2.png" id="6_ustib"]
[ext_resource type="Script" path="res://Spellslots.gd" id="7_87xio"]
[ext_resource type="Texture2D" uid="uid://c6usiuxdbx3kd" path="res://assets/key_3.png" id="7_xw07i"]
[ext_resource type="Texture2D" uid="uid://tu5dunhlwvj3" path="res://assets/key_4.png" id="8_q4npa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbe7n"]
size = Vector2(213, 306)

[node name="world" type="Node2D"]

[node name="level" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="level"]
offset_top = 743.0
offset_right = 2072.0
offset_bottom = 951.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="level"]
offset_left = 2064.0
offset_top = 84.0
offset_right = 3806.0
offset_bottom = 1686.0
color = Color(0.39, 0.39, 0.39, 1)

[node name="ColorRect3" type="ColorRect" parent="level"]
offset_left = 2737.0
offset_top = 1685.0
offset_right = 2777.0
offset_bottom = 1725.0
scale = Vector2(8.75145, 9.13196)
color = Color(0, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="level"]
offset_left = 1964.0
offset_top = 2037.0
offset_right = 2262.0
offset_bottom = 2198.0
scale = Vector2(8.75145, 9.13196)
color = Color(0.388235, 0.388235, 0.388235, 1)

[node name="switch0" type="Polygon2D" parent="level"]
visible = false
position = Vector2(1160, 632)
polygon = PackedVector2Array(0, 0)

[node name="invisible_in_game" type="Node" parent="level/switch0"]
script = ExtResource("1_3m3gt")

[node name="switch1" type="Polygon2D" parent="level"]
visible = false
position = Vector2(2912, 405)
color = Color(1, 0.164706, 0.611765, 1)
polygon = PackedVector2Array(0, 0, 0, 945)

[node name="invisible_in_game" type="Node" parent="level/switch1"]
script = ExtResource("1_3m3gt")

[node name="switch2" type="Polygon2D" parent="level"]
visible = false
position = Vector2(2948, 2345)
color = Color(1, 0.164706, 0.611765, 1)
polygon = PackedVector2Array(0, 0, 578, 0, 578, 605, 0, 605)

[node name="invisible_in_game" type="Node" parent="level/switch2"]
script = ExtResource("1_3m3gt")

[node name="areaswitch" parent="level" instance=ExtResource("1_5doj2")]
visible = false
offset_left = 1967.0
offset_top = 728.0
offset_right = 2065.0
offset_bottom = 974.0
scene_to = "switch1"

[node name="areaswitch2" parent="level" instance=ExtResource("1_5doj2")]
visible = false
offset_left = 2726.0
offset_top = 1682.0
offset_right = 3097.0
offset_bottom = 1838.0
scene_to = "switch2"

[node name="spawner" type="Node2D" parent="level"]
position = Vector2(3638, 280)
script = ExtResource("3_cqtm7")

[node name="ColorRect" type="ColorRect" parent="level/spawner"]
offset_left = -107.0
offset_top = -147.0
offset_right = 107.0
offset_bottom = 159.0
color = Color(1, 0.490196, 0.490196, 1)

[node name="Area2D" type="Area2D" parent="level/spawner"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level/spawner/Area2D"]
position = Vector2(-0.5, 7)
shape = SubResource("RectangleShape2D_mbe7n")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="spawner2" type="Node2D" parent="level"]
position = Vector2(3638, 1438)
script = ExtResource("3_cqtm7")
which_wheel = "EarthWheel"

[node name="ColorRect" type="ColorRect" parent="level/spawner2"]
offset_left = -107.0
offset_top = -147.0
offset_right = 107.0
offset_bottom = 159.0
color = Color(0.611765, 0.729412, 0.388235, 1)

[node name="Area2D" type="Area2D" parent="level/spawner2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level/spawner2/Area2D"]
position = Vector2(-0.5, 7)
shape = SubResource("RectangleShape2D_mbe7n")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="Label" type="Label" parent="level"]
offset_left = 3135.0
offset_top = 684.0
offset_right = 3280.0
offset_bottom = 759.0
scale = Vector2(4.45661, 4.07222)
text = "Move onto these
to gain an element
of that color."

[node name="Label2" type="Label" parent="level"]
offset_left = 2116.0
offset_top = 1400.0
offset_right = 2435.0
offset_bottom = 1475.0
scale = Vector2(3.6605, 3.18349)
text = "Type the keys below to activate that spell
To use the fireball, right click to cast
the projectile in that direction."

[node name="Label3" type="Label" parent="level"]
offset_left = 254.0
offset_top = 301.0
offset_right = 597.0
offset_bottom = 350.0
scale = Vector2(3.2767, 3.19002)
text = "WASD to move.
Space to dash in the direction you're moving"

[node name="Label4" type="Label" parent="level"]
offset_left = 1774.0
offset_top = 970.0
offset_right = 1854.0
offset_bottom = 993.0
scale = Vector2(3.2767, 3.19002)
text = "Go here ->"

[node name="golem" parent="level" instance=ExtResource("4_2j3f2")]
position = Vector2(4111, 2720)
HP = 3
DASH_LENGTH = 500
DASH_COOLDOWN_SECONDS = 1.0
action_state = 1

[node name="golem2" parent="level" instance=ExtResource("4_2j3f2")]
position = Vector2(2954, 3193)
HP = 3
action_state = 1

[node name="ui" type="CanvasLayer" parent="."]
script = ExtResource("3_2dt8t")

[node name="Label" type="Label" parent="ui"]
offset_left = 457.0
offset_top = -7.0
offset_right = 497.0
offset_bottom = 16.0
scale = Vector2(7.56, 8.2)

[node name="magic" type="Node2D" parent="ui"]
modulate = Color(1, 1, 1, 0)

[node name="earth" type="Node2D" parent="ui/magic"]
position = Vector2(64, 144)
scale = Vector2(0.75, 0.75)
script = ExtResource("4_dx30y")
meter_color = Color(0.51027, 0.73, 0.1022, 1)

[node name="Polygon2D" type="Polygon2D" parent="ui/magic/earth"]
z_index = -1
position = Vector2(2, -1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-1, -22, 16, -19, 18, -6, 17, 13, 11, 23, -7, 26, -20, 17, -23, 2, -22, -9, -15, -18)

[node name="Label" type="Label" parent="ui/magic/earth"]
offset_left = -8.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = -9.0
scale = Vector2(2.09901, 2.68)
text = "2"

[node name="air" type="Node2D" parent="ui/magic"]
position = Vector2(60, 254)
scale = Vector2(0.75, 0.75)
script = ExtResource("4_dx30y")
meter_color = Color(0.8827, 0.906815, 0.91, 1)

[node name="Polygon2D2" type="Polygon2D" parent="ui/magic/air"]
z_index = -1
position = Vector2(-1, -3)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-1, -22, 16, -19, 18, -6, 17, 13, 11, 23, -7, 26, -20, 17, -23, 2, -22, -9, -15, -18)

[node name="Label" type="Label" parent="ui/magic/air"]
offset_left = -11.0
offset_top = -32.0
offset_right = 29.0
offset_bottom = -9.0
scale = Vector2(2.09901, 2.68)
text = "0"

[node name="fire" type="Node2D" parent="ui/magic"]
position = Vector2(60, 372)
scale = Vector2(0.75, 0.75)
script = ExtResource("4_dx30y")
meter_color = Color(0.99, 0.1122, 0.0495, 1)

[node name="Polygon2D3" type="Polygon2D" parent="ui/magic/fire"]
z_index = -1
position = Vector2(0, -4)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-1, -22, 16, -19, 18, -6, 17, 13, 11, 23, -7, 26, -20, 17, -23, 2, -22, -9, -15, -18)

[node name="Label" type="Label" parent="ui/magic/fire"]
offset_left = -10.0
offset_top = -33.0
offset_right = 30.0
offset_bottom = -10.0
scale = Vector2(2.09901, 2.68)
text = "2"

[node name="water" type="Node2D" parent="ui/magic"]
position = Vector2(62, 480)
scale = Vector2(0.75, 0.75)
script = ExtResource("4_dx30y")
meter_color = Color(0.1092, 0.74984, 0.91, 1)

[node name="Polygon2D4" type="Polygon2D" parent="ui/magic/water"]
z_index = -1
position = Vector2(1, -2)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-1, -22, 16, -19, 18, -6, 17, 13, 11, 23, -7, 26, -20, 17, -23, 2, -22, -9, -15, -18)

[node name="Label" type="Label" parent="ui/magic/water"]
offset_left = -10.0
offset_top = -33.0
offset_right = 30.0
offset_bottom = -10.0
scale = Vector2(2.09901, 2.68)
text = "0"

[node name="Spellslots" type="Sprite2D" parent="ui/magic" node_paths=PackedStringArray("key_input_label")]
position = Vector2(568, 592)
texture = ExtResource("5_ul220")
script = ExtResource("7_87xio")
key_input_label = NodePath("../../Label")

[node name="slot1" type="Node2D" parent="ui/magic/Spellslots"]
position = Vector2(-515, 1)

[node name="ColorRect" type="ColorRect" parent="ui/magic/Spellslots/slot1"]
offset_left = -36.0
offset_top = -36.0
offset_right = 34.0
offset_bottom = 33.0
color = Color(1, 0.23, 0.23, 1)

[node name="keys" type="Node2D" parent="ui/magic/Spellslots/slot1"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-1, -1)

[node name="1" type="Sprite2D" parent="ui/magic/Spellslots/slot1/keys"]
visible = false
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("5_8587g")

[node name="2" type="Sprite2D" parent="ui/magic/Spellslots/slot1/keys"]
visible = false
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("6_ustib")

[node name="3" type="Sprite2D" parent="ui/magic/Spellslots/slot1/keys"]
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("7_xw07i")

[node name="4" type="Sprite2D" parent="ui/magic/Spellslots/slot1/keys"]
visible = false
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("8_q4npa")

[node name="slot2" type="Node2D" parent="ui/magic/Spellslots"]
position = Vector2(-429, 1)

[node name="ColorRect" type="ColorRect" parent="ui/magic/Spellslots/slot2"]
offset_left = -36.0
offset_top = -36.0
offset_right = 34.0
offset_bottom = 33.0
color = Color(1, 0.23, 0.23, 1)

[node name="keys" type="Node2D" parent="ui/magic/Spellslots/slot2"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-1, -1)

[node name="1" type="Sprite2D" parent="ui/magic/Spellslots/slot2/keys"]
visible = false
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("5_8587g")

[node name="2" type="Sprite2D" parent="ui/magic/Spellslots/slot2/keys"]
visible = false
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("6_ustib")

[node name="3" type="Sprite2D" parent="ui/magic/Spellslots/slot2/keys"]
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("7_xw07i")

[node name="4" type="Sprite2D" parent="ui/magic/Spellslots/slot2/keys"]
visible = false
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("8_q4npa")

[node name="slot3" type="Node2D" parent="ui/magic/Spellslots"]
position = Vector2(-343, 1)

[node name="ColorRect" type="ColorRect" parent="ui/magic/Spellslots/slot3"]
offset_left = -36.0
offset_top = -36.0
offset_right = 34.0
offset_bottom = 33.0
color = Color(0.509804, 0.729412, 0.101961, 1)

[node name="keys" type="Node2D" parent="ui/magic/Spellslots/slot3"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-1, -1)

[node name="1" type="Sprite2D" parent="ui/magic/Spellslots/slot3/keys"]
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("5_8587g")

[node name="2" type="Sprite2D" parent="ui/magic/Spellslots/slot3/keys"]
visible = false
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("6_ustib")

[node name="3" type="Sprite2D" parent="ui/magic/Spellslots/slot3/keys"]
visible = false
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("7_xw07i")

[node name="4" type="Sprite2D" parent="ui/magic/Spellslots/slot3/keys"]
visible = false
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("8_q4npa")

[node name="slot4" type="Node2D" parent="ui/magic/Spellslots"]
visible = false
position = Vector2(-257, 1)

[node name="ColorRect" type="ColorRect" parent="ui/magic/Spellslots/slot4"]
offset_left = -36.0
offset_top = -36.0
offset_right = 34.0
offset_bottom = 33.0

[node name="keys" type="Node2D" parent="ui/magic/Spellslots/slot4"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-1, -1)

[node name="1" type="Sprite2D" parent="ui/magic/Spellslots/slot4/keys"]
visible = false
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("5_8587g")

[node name="2" type="Sprite2D" parent="ui/magic/Spellslots/slot4/keys"]
visible = false
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("6_ustib")

[node name="3" type="Sprite2D" parent="ui/magic/Spellslots/slot4/keys"]
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("7_xw07i")

[node name="4" type="Sprite2D" parent="ui/magic/Spellslots/slot4/keys"]
visible = false
position = Vector2(1, 1)
scale = Vector2(3, 3)
texture = ExtResource("8_q4npa")

[node name="projectiles" type="Node" parent="."]

[node name="character" parent="." node_paths=PackedStringArray("element_input_label") instance=ExtResource("1_c4pgj")]
position = Vector2(346, 743)
CAMERA_INPUT_UPDATE = 0.05
DASH_LENGTH = 450
CAMERA_TRACKING_OFFSET = 300
ELEMENT_INPUT_TIMEOUT = 1.2
PUSH_STRENGTH = 90
element_input_label = NodePath("../ui/Label")

[node name="camera" type="Camera2D" parent="." node_paths=PackedStringArray("polygon_restraint")]
position = Vector2(1150, 636)
zoom = Vector2(0.5, 0.5)
script = ExtResource("1_6soux")
BASE_SPEED = 10000.0
MAX_SPEED = 11000.0
SPEED_SCALE = 10.0
EASE_OUT_FACTOR = 0.7
SMOOTHING_SPEED = 3.0
MAX_OFFSET = 300.0
MAX_DISTANCE = 2
polygon_restraint = NodePath("../level/switch0")

[node name="ColorRect" type="ColorRect" parent="camera"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.156863, 1, 1)

[node name="mouse_span" type="ColorRect" parent="camera"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -494.5
offset_top = -328.0
offset_right = 494.5
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.156863, 1, 0.403922)

[node name="test_camera" type="Camera2D" parent="."]
position = Vector2(3116, 2698)
enabled = false
zoom = Vector2(0.5, 0.5)

[connection signal="body_entered" from="level/spawner/Area2D" to="level/spawner" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="level/spawner2/Area2D" to="level/spawner2" method="_on_area_2d_body_entered"]
